[gd_scene load_steps=14 format=3 uid="uid://bdcy8qeketbv2"]

[ext_resource type="Script" path="res://scenes/advanced-options/MatrixOptions.gd" id="1_55ogc"]
[ext_resource type="Texture2D" uid="uid://vceyw8jntod2" path="res://assets/gui/panels.png" id="1_m2fv7"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="2_n2e17"]
[ext_resource type="Texture2D" uid="uid://ci2mpewrmv3rv" path="res://assets/gui/close_button.png" id="2_nqjoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gb82n"]
atlas = ExtResource("1_m2fv7")
region = Rect2(18, 2, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm2rf"]
atlas = ExtResource("2_n2e17")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuoyu"]
atlas = ExtResource("2_n2e17")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvdh1"]
atlas = ExtResource("2_nqjoq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8v2a"]
atlas = ExtResource("2_nqjoq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6n0h"]
atlas = ExtResource("2_nqjoq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcpij"]
atlas = ExtResource("2_n2e17")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6pvj"]
atlas = ExtResource("2_n2e17")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ss7"]
atlas = ExtResource("2_n2e17")
region = Rect2(32, 224, 32, 32)

[node name="MatrixOptions" type="MarginContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -160.0
offset_right = 152.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_55ogc")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="Content"]
layout_mode = 2
texture = SubResource("AtlasTexture_gb82n")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Options" type="MarginContainer" parent="Content"]
layout_mode = 2

[node name="Columns" type="HBoxContainer" parent="Content/Options"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Main" type="VBoxContainer" parent="Content/Options/Columns"]
layout_mode = 2

[node name="TranslationBox" type="HBoxContainer" parent="Content/Options/Columns/Main"]
layout_mode = 2

[node name="TranslationLabel" type="TextureRect" parent="Content/Options/Columns/Main/TranslationBox"]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_mm2rf")
stretch_mode = 2

[node name="TranslationX" type="SpinBox" parent="Content/Options/Columns/Main/TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in x-axis"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="TranslationY" type="SpinBox" parent="Content/Options/Columns/Main/TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in y-axis"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="MatrixBox" type="HBoxContainer" parent="Content/Options/Columns/Main"]
layout_mode = 2

[node name="MatrixLabel" type="TextureRect" parent="Content/Options/Columns/Main/MatrixBox"]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_vuoyu")
stretch_mode = 2

[node name="Matrix" type="GridContainer" parent="Content/Options/Columns/Main/MatrixBox"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="Matrix11" type="SpinBox" parent="Content/Options/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix12" type="SpinBox" parent="Content/Options/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix21" type="SpinBox" parent="Content/Options/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix33" type="SpinBox" parent="Content/Options/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="ElseBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseButton" type="TextureButton" parent="ElseBox"]
layout_mode = 2
tooltip_text = "close"
texture_normal = SubResource("AtlasTexture_gvdh1")
texture_pressed = SubResource("AtlasTexture_p8v2a")
texture_hover = SubResource("AtlasTexture_x6n0h")

[node name="RotationButton" type="TextureButton" parent="ElseBox"]
layout_mode = 2
tooltip_text = "switch to geometric view"
texture_normal = SubResource("AtlasTexture_qcpij")
texture_pressed = SubResource("AtlasTexture_y6pvj")
texture_hover = SubResource("AtlasTexture_r3ss7")

[connection signal="pressed" from="ElseBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ElseBox/RotationButton" to="." method="_on_rotation_button_pressed"]
